<resources>
    <string name="app_name">Market Pymes</string>
    <string name="log">Inicio de Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="correo_electr_nico1">Correo Electrónico:</string>
    <string name="contado1">  Ventas Contado</string>
    <string name="credito1">  Ventas Crédito</string>
    <string name="lblContado1">  Monto total:</string>
    <string name="lblCredito1">  Monto total:</string>
    <string name="lblFactitle">Facturación</string>
    <string name="txtCodPro">Cód. del Producto</string>
    <string name="txtCantPro">Cant. del Producto</string>
    <string name="btnSearch">Buscar</string>
    <string name="btnAddPro">Agregar</string>
    <string name="btnFacturar">Facturar</string>
    <string name="btnExistencias">Existencias</string>
    <string name="lblCxC">Cuentas por Cobrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="nameCod">Nombre o Cod del cliente</string>
    <string name="nameCodDes">Nombre, Factura o Descripción</string>


    <string name="num_factura">Nº Factura:</string>
    <string name="fecha_pago">Fecha de Pago:</string>
    <string name="cliente">Cliente:</string>
    <string name="proveedor">Proveedor:</string>
    <string name="deuda">Deuda:</string>
    <string name="cuota">Cuota:</string>
    <string name="abonado">Total Abonado:</string>
    <string name="saldo">Saldo:</string>
</resources>
