<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.market_pymes.fragment.Fragment_Inventarios"
    android:background="@color/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inventarios"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:textStyle="normal|bold"
        tools:ignore="HardcodedText"
        android:textColor="@color/colorAccent"
        android:id="@+id/lblInventarios" />

    <Button
        android:text="@string/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/valueCxP"
        android:layout_toRightOf="@+id/valueCxP"
        android:layout_toEndOf="@+id/valueCxP"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/btnSearch"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/background" />

    <ImageView
        android:layout_width="180sp"
        android:layout_height="170sp"
        app:srcCompat="@drawable/iso_esquina"
        android:id="@+id/logoCxc"
        android:scaleType="fitXY"
        android:maxHeight="@android:dimen/app_icon_size"
        android:maxWidth="@android:dimen/app_icon_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/opossitive"
        android:text="@string/btnExistencias"
        android:layout_below="@+id/valueCxP"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Productos con existencias mínimas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logoCxc"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="19dp"
        android:id="@+id/valueCxP"
        tools:ignore="UnknownIdInLayout"
        android:hint="@string/nameCodDes"
        android:layout_below="@+id/lblInventarios"
        android:layout_alignLeft="@+id/lblInventarios"
        android:layout_alignStart="@+id/lblInventarios" />

</RelativeLayout>
