<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cuenta_xcobrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    tools:context="com.market_pymes.CuentaXCobrar">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCxC"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="normal|bold"
        tools:ignore="HardcodedText"
        android:textColor="@color/colorAccent"
        android:id="@+id/lblCxC"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/lblCxC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_below="@+id/txtEmail"
            android:textColorHint="@android:color/black"
            android:gravity="center"
            android:layout_width="230sp"
            android:layout_gravity="left">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/valueCxC"
                tools:ignore="UnknownIdInLayout"
                android:ems="10"
                android:hint="@string/nameCod"
                android:layout_below="@+id/lblCxC"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCxC"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/boton_redondo"
            android:layout_alignBottom="@+id/valueCxC"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_marginLeft="50sp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140sp" />


</RelativeLayout>
