<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.market_pymes.MainActivity"
    android:background="@color/colorPrimary">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:hint="@string/correo_electr_nico"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lbEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPass"
        android:hint="@string/contrase_a"
        android:textAlignment="center"
        android:layout_below="@+id/txtContraseña"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tituloMain"
        android:text="@string/log"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/logoApp"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@drawable/boton_redondo"
        android:layout_alignTop="@+id/txtPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:text="@string/contrase_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtContraseña"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtEmail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbEmail"
        android:text="@string/correo_electr_nico"
        android:textSize="20sp"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:layout_below="@+id/tituloMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo_mp_two"
        android:id="@+id/logoApp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />


</RelativeLayout>
