<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCxC"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="normal|bold"
        tools:ignore="HardcodedText"
        android:textColor="@color/colorAccent"
        android:id="@+id/lblCxC"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center_vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_below="@+id/txtEmail"
            android:textColorHint="@android:color/black"
            android:gravity="center"
            android:layout_width="230sp"
            android:layout_gravity="left">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/valueCxC"
                tools:ignore="UnknownIdInLayout"
                android:ems="10"
                android:hint="@string/nameCod"
                android:layout_below="@+id/lblCxC"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCxC"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/boton_redondo"
            android:layout_alignBottom="@+id/valueCxC"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_marginLeft="50sp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp">

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="51dp"
                android:id="@+id/res" />

            </android.support.v7.widget.CardView>
    </RelativeLayout>


</LinearLayout>
